// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsTableComponent should not render selection column when isSelectionDisabled is true 1`] = `
<DocumentsTableComponent
  columnHeaders={
    Object {
      "idHeader": "id",
      "partitionKeyHeaders": Array [
        "partitionKey",
      ],
    }
  }
  isSelectionDisabled={true}
  items={
    Array [
      Object {
        "id": "1",
        "partitionKey": "pk1",
      },
      Object {
        "id": "2",
        "partitionKey": "pk2",
      },
      Object {
        "id": "3",
        "partitionKey": "pk3",
      },
    ]
  }
  onItemClicked={[Function]}
  onSelectedRowsChange={[Function]}
  selectedRows={Set {}}
  size={
    Object {
      "height": 0,
      "width": 0,
    }
  }
>
  <Table
    aria-label="Filtered documents table"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":3}}"
    noNativeElements={true}
    role="grid"
    size="small"
    style={
      Object {
        "minWidth": "fit-content",
      }
    }
  >
    <div
      aria-label="Filtered documents table"
      className="fui-Table ___1kbqy50_18rlg51 fgkb47j fhovq9v ftgm304"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":3}}"
      role="grid"
      style={
        Object {
          "minWidth": "fit-content",
        }
      }
    >
      <TableHeader>
        <div
          className="fui-TableHeader ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <TableRow
            className="___1flxklq_0000000 f1i800kq"
            style={
              Object {
                "width": -15,
              }
            }
          >
            <div
              className="fui-TableRow ___3lwen00_1bi4t7h f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
              role="row"
              style={
                Object {
                  "width": -15,
                }
              }
            >
              <Menu
                key="id"
                openOnContext={true}
              >
                <ContextSelector.Provider
                  value={
                    Object {
                      "checkedValues": Object {},
                      "hasCheckmarks": false,
                      "hasIcons": false,
                      "inline": false,
                      "isSubmenu": false,
                      "menuPopoverRef": Object {
                        "current": null,
                      },
                      "mountNode": null,
                      "onCheckedValueChange": [Function],
                      "open": false,
                      "openOnContext": true,
                      "openOnHover": false,
                      "persistOnItemClick": false,
                      "setOpen": [Function],
                      "triggerId": "menu17",
                      "triggerRef": Object {
                        "current": <div
                          class="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                          data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                          id="menu17"
                          role="columnheader"
                          style="width: 50px; min-width: 50px; max-width: 50px;"
                        >
                          <div
                            class="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                            role="presentation"
                          >
                            id
                          </div>
                          <span
                            class="fui-TableHeaderCell__aside"
                          >
                            <div
                              aria-hidden="true"
                              aria-label="Resize column"
                              aria-valuetext="50 pixels"
                              class="fui-TableResizeHandle ___l1ulde0_1gn6xqj f1euv43f f1e31b4d f15twtuk f1yab3r1 fjw5fx7 f1hu3pq6 fn2i5td f19f4twv f1eybr6b fc3en1c fk73vx1 f13u1uyl fezquic f19g0ac f1tkae59 ftqa4ok f15pjodv ftgrb5f f2df6js fshsryb f11ef69 f12lb1dx fu4ulse fw2wsqs f1swzn7y"
                              data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                              role="separator"
                            />
                          </span>
                        </div>,
                      },
                    }
                  }
                >
                  <MenuTrigger
                    key=".0"
                  >
                    <TableHeaderCell
                      aside={
                        <TableResizeHandle
                          aria-hidden={true}
                          aria-label="Resize column"
                          aria-valuetext="50 pixels"
                          data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                          role="separator"
                        />
                      }
                      className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                      data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                      id="menu17"
                      key="id"
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      style={
                        Object {
                          "maxWidth": 50,
                          "minWidth": 50,
                          "width": 50,
                        }
                      }
                    >
                      <div
                        className="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                        data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                        id="menu17"
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        role="columnheader"
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                      >
                        <div
                          className="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          role="presentation"
                        >
                          id
                        </div>
                        <span
                          className="fui-TableHeaderCell__aside"
                        >
                          <TableResizeHandle
                            aria-hidden={true}
                            aria-label="Resize column"
                            aria-valuetext="50 pixels"
                            data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                            onBlur={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="separator"
                          >
                            <div
                              aria-hidden={true}
                              aria-label="Resize column"
                              aria-valuetext="50 pixels"
                              className="fui-TableResizeHandle ___l1ulde0_1gn6xqj f1euv43f f1e31b4d f15twtuk f1yab3r1 fjw5fx7 f1hu3pq6 fn2i5td f19f4twv f1eybr6b fc3en1c fk73vx1 f13u1uyl fezquic f19g0ac f1tkae59 ftqa4ok f15pjodv ftgrb5f f2df6js fshsryb f11ef69 f12lb1dx fu4ulse fw2wsqs f1swzn7y"
                              data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onMouseDown={[Function]}
                              onTouchStart={[Function]}
                              role="separator"
                            />
                          </TableResizeHandle>
                        </span>
                      </div>
                    </TableHeaderCell>
                  </MenuTrigger>
                </ContextSelector.Provider>
              </Menu>
              <Menu
                key="partitionKey"
                openOnContext={true}
              >
                <ContextSelector.Provider
                  value={
                    Object {
                      "checkedValues": Object {},
                      "hasCheckmarks": false,
                      "hasIcons": false,
                      "inline": false,
                      "isSubmenu": false,
                      "menuPopoverRef": Object {
                        "current": null,
                      },
                      "mountNode": null,
                      "onCheckedValueChange": [Function],
                      "open": false,
                      "openOnContext": true,
                      "openOnHover": false,
                      "persistOnItemClick": false,
                      "setOpen": [Function],
                      "triggerId": "menu18",
                      "triggerRef": Object {
                        "current": <div
                          class="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                          data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                          id="menu18"
                          role="columnheader"
                          style="width: 50px; min-width: 50px; max-width: 50px;"
                        >
                          <div
                            class="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                            role="presentation"
                          >
                            <span
                              title="partitionKey"
                            >
                              partitionKey
                            </span>
                          </div>
                        </div>,
                      },
                    }
                  }
                >
                  <MenuTrigger
                    key=".0"
                  >
                    <TableHeaderCell
                      aside={null}
                      className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                      data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                      id="menu18"
                      key="partitionKey"
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      style={
                        Object {
                          "maxWidth": 50,
                          "minWidth": 50,
                          "width": 50,
                        }
                      }
                    >
                      <div
                        className="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                        data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                        id="menu18"
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        role="columnheader"
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                      >
                        <div
                          className="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          role="presentation"
                        >
                          <span
                            title="partitionKey"
                          >
                            partitionKey
                          </span>
                        </div>
                      </div>
                    </TableHeaderCell>
                  </MenuTrigger>
                </ContextSelector.Provider>
              </Menu>
            </div>
          </TableRow>
        </div>
      </TableHeader>
      <TableBody>
        <div
          className="fui-TableBody ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <List
            direction="ltr"
            height={-36}
            itemCount={3}
            itemData={
              Array [
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "1",
                    "partitionKey": "pk1",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 0,
                  "selected": false,
                },
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "2",
                    "partitionKey": "pk2",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 1,
                  "selected": false,
                },
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "3",
                    "partitionKey": "pk3",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 2,
                  "selected": false,
                },
              ]
            }
            itemSize={36}
            layout="vertical"
            overscanCount={2}
            style={
              Object {
                "overflowY": "scroll",
              }
            }
            useIsScrolling={false}
            width={0}
          >
            <div
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": -36,
                  "overflow": "auto",
                  "overflowY": "scroll",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 108,
                    "pointerEvents": undefined,
                    "width": "100%",
                  }
                }
              >
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={0}
                  key="0"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={2}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="1"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 0,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={2}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 0,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="1"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="1"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  1
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk1"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk1"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk1
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={1}
                  key="1"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 36,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={3}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="2"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 36,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={3}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 36,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="2"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="2"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  2
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk2"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk2"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk2
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={2}
                  key="2"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 72,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={4}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="3"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 72,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={4}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 72,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="3"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="3"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  3
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk3"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk3"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk3
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
              </div>
            </div>
          </List>
        </div>
      </TableBody>
    </div>
  </Table>
</DocumentsTableComponent>
`;

exports[`DocumentsTableComponent should render documents and partition keys in header 1`] = `
<DocumentsTableComponent
  columnHeaders={
    Object {
      "idHeader": "id",
      "partitionKeyHeaders": Array [
        "partitionKey",
      ],
    }
  }
  isSelectionDisabled={false}
  items={
    Array [
      Object {
        "id": "1",
        "partitionKey": "pk1",
      },
      Object {
        "id": "2",
        "partitionKey": "pk2",
      },
      Object {
        "id": "3",
        "partitionKey": "pk3",
      },
    ]
  }
  onItemClicked={[Function]}
  onSelectedRowsChange={[Function]}
  selectedRows={Set {}}
  size={
    Object {
      "height": 0,
      "width": 0,
    }
  }
>
  <Table
    aria-label="Filtered documents table"
    data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":3}}"
    noNativeElements={true}
    role="grid"
    size="small"
    style={
      Object {
        "minWidth": "fit-content",
      }
    }
  >
    <div
      aria-label="Filtered documents table"
      className="fui-Table ___1kbqy50_18rlg51 fgkb47j fhovq9v ftgm304"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":3}}"
      role="grid"
      style={
        Object {
          "minWidth": "fit-content",
        }
      }
    >
      <TableHeader>
        <div
          className="fui-TableHeader ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <TableRow
            className="___1flxklq_0000000 f1i800kq"
            style={
              Object {
                "width": -15,
              }
            }
          >
            <div
              className="fui-TableRow ___3lwen00_1bi4t7h f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
              role="row"
              style={
                Object {
                  "width": -15,
                }
              }
            >
              <TableSelectionCell
                checkboxIndicator={
                  Object {
                    "aria-label": "Select all rows ",
                  }
                }
                checked={false}
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="fui-TableSelectionCell ___itc2100_zkyq7r0 f17mccla fz5stix f1g0x7ka fhxju0i f1qch9an f1cnd47f fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw fqerorx f1neuvcm fkjuxzh fvrlu0f f1c71y05 f4d9j23"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="cell"
                >
                  <Checkbox
                    aria-label="Select all rows "
                    checked={false}
                    className="fui-TableSelectionCell__checkboxIndicator"
                  >
                    <span
                      className="fui-Checkbox r1qaeuiq fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                    >
                      <input
                        aria-label="Select all rows "
                        checked={false}
                        className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                        id="checkbox-2"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <div
                        aria-hidden={true}
                        className="fui-Checkbox__indicator rl7ci6d"
                      />
                    </span>
                  </Checkbox>
                </div>
              </TableSelectionCell>
              <Menu
                key="id"
                openOnContext={true}
              >
                <ContextSelector.Provider
                  value={
                    Object {
                      "checkedValues": Object {},
                      "hasCheckmarks": false,
                      "hasIcons": false,
                      "inline": false,
                      "isSubmenu": false,
                      "menuPopoverRef": Object {
                        "current": null,
                      },
                      "mountNode": null,
                      "onCheckedValueChange": [Function],
                      "open": false,
                      "openOnContext": true,
                      "openOnHover": false,
                      "persistOnItemClick": false,
                      "setOpen": [Function],
                      "triggerId": "menu3",
                      "triggerRef": Object {
                        "current": <div
                          class="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                          data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                          id="menu3"
                          role="columnheader"
                          style="width: 50px; min-width: 50px; max-width: 50px;"
                        >
                          <div
                            class="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                            role="presentation"
                          >
                            id
                          </div>
                          <span
                            class="fui-TableHeaderCell__aside"
                          >
                            <div
                              aria-hidden="true"
                              aria-label="Resize column"
                              aria-valuetext="50 pixels"
                              class="fui-TableResizeHandle ___l1ulde0_1gn6xqj f1euv43f f1e31b4d f15twtuk f1yab3r1 fjw5fx7 f1hu3pq6 fn2i5td f19f4twv f1eybr6b fc3en1c fk73vx1 f13u1uyl fezquic f19g0ac f1tkae59 ftqa4ok f15pjodv ftgrb5f f2df6js fshsryb f11ef69 f12lb1dx fu4ulse fw2wsqs f1swzn7y"
                              data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                              role="separator"
                            />
                          </span>
                        </div>,
                      },
                    }
                  }
                >
                  <MenuTrigger
                    key=".0"
                  >
                    <TableHeaderCell
                      aside={
                        <TableResizeHandle
                          aria-hidden={true}
                          aria-label="Resize column"
                          aria-valuetext="50 pixels"
                          data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                          onBlur={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                          role="separator"
                        />
                      }
                      className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                      data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                      id="menu3"
                      key="id"
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      style={
                        Object {
                          "maxWidth": 50,
                          "minWidth": 50,
                          "width": 50,
                        }
                      }
                    >
                      <div
                        className="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                        data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                        id="menu3"
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        role="columnheader"
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                      >
                        <div
                          className="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          role="presentation"
                        >
                          id
                        </div>
                        <span
                          className="fui-TableHeaderCell__aside"
                        >
                          <TableResizeHandle
                            aria-hidden={true}
                            aria-label="Resize column"
                            aria-valuetext="50 pixels"
                            data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                            onBlur={[Function]}
                            onKeyDown={[Function]}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            role="separator"
                          >
                            <div
                              aria-hidden={true}
                              aria-label="Resize column"
                              aria-valuetext="50 pixels"
                              className="fui-TableResizeHandle ___l1ulde0_1gn6xqj f1euv43f f1e31b4d f15twtuk f1yab3r1 fjw5fx7 f1hu3pq6 fn2i5td f19f4twv f1eybr6b fc3en1c fk73vx1 f13u1uyl fezquic f19g0ac f1tkae59 ftqa4ok f15pjodv ftgrb5f f2df6js fshsryb f11ef69 f12lb1dx fu4ulse fw2wsqs f1swzn7y"
                              data-tabster="{\\"focusable\\":{\\"ignoreKeydown\\":{\\"ArrowLeft\\":true,\\"ArrowRight\\":true}}}"
                              onBlur={[Function]}
                              onClick={[Function]}
                              onKeyDown={[Function]}
                              onMouseDown={[Function]}
                              onTouchStart={[Function]}
                              role="separator"
                            />
                          </TableResizeHandle>
                        </span>
                      </div>
                    </TableHeaderCell>
                  </MenuTrigger>
                </ContextSelector.Provider>
              </Menu>
              <Menu
                key="partitionKey"
                openOnContext={true}
              >
                <ContextSelector.Provider
                  value={
                    Object {
                      "checkedValues": Object {},
                      "hasCheckmarks": false,
                      "hasIcons": false,
                      "inline": false,
                      "isSubmenu": false,
                      "menuPopoverRef": Object {
                        "current": null,
                      },
                      "mountNode": null,
                      "onCheckedValueChange": [Function],
                      "open": false,
                      "openOnContext": true,
                      "openOnHover": false,
                      "persistOnItemClick": false,
                      "setOpen": [Function],
                      "triggerId": "menu4",
                      "triggerRef": Object {
                        "current": <div
                          class="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                          data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                          id="menu4"
                          role="columnheader"
                          style="width: 50px; min-width: 50px; max-width: 50px;"
                        >
                          <div
                            class="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                            role="presentation"
                          >
                            <span
                              title="partitionKey"
                            >
                              partitionKey
                            </span>
                          </div>
                        </div>,
                      },
                    }
                  }
                >
                  <MenuTrigger
                    key=".0"
                  >
                    <TableHeaderCell
                      aside={null}
                      className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                      data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                      id="menu4"
                      key="partitionKey"
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      onMouseMove={[Function]}
                      style={
                        Object {
                          "maxWidth": 50,
                          "minWidth": 50,
                          "width": 50,
                        }
                      }
                    >
                      <div
                        className="fui-TableHeaderCell ___bsa1el0_igwvr90 figsok6 f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fhix6mv fha7anx f1fmzww4 fs9qmxf f187m4uq f145mzao f1uha7eq f10pi13n f22iagw fqerorx f1neuvcm fkjuxzh f10tiqix finvdd3 fjik90z fw35ms5"
                        data-tabster="{\\"restorer\\":{\\"type\\":1}}"
                        id="menu4"
                        onContextMenu={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        role="columnheader"
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                      >
                        <div
                          className="fui-TableHeaderCell__button ___hg3sc00_fmp4b50 fq6nmtn f1e4lqlz f1u2r49w f1ym3bx4 f1mo0ibp fjoy568 fytdu2e f1mtd64y f1y7q3j9 f1g0x7ka fhxju0i f1qch9an f1cnd47f f1ern45e f1n71otn f1h8hb77 f1deefiw fgusgyc f10pi13n fly5x3f f22iagw fqerorx f1l02sjl f122n59 f1ufnopg f14sijuj f1nxs5xn f1neuvcm fkjuxzh f1s6fcnf"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          role="presentation"
                        >
                          <span
                            title="partitionKey"
                          >
                            partitionKey
                          </span>
                        </div>
                      </div>
                    </TableHeaderCell>
                  </MenuTrigger>
                </ContextSelector.Provider>
              </Menu>
            </div>
          </TableRow>
        </div>
      </TableHeader>
      <TableBody>
        <div
          className="fui-TableBody ___oeyxrt0_1baslyg ftgm304"
          role="rowgroup"
        >
          <List
            direction="ltr"
            height={-36}
            itemCount={3}
            itemData={
              Array [
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "1",
                    "partitionKey": "pk1",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 0,
                  "selected": false,
                },
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "2",
                    "partitionKey": "pk2",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 1,
                  "selected": false,
                },
                Object {
                  "appearance": "none",
                  "item": Object {
                    "id": "3",
                    "partitionKey": "pk3",
                  },
                  "onClick": [Function],
                  "onKeyDown": [Function],
                  "rowId": 2,
                  "selected": false,
                },
              ]
            }
            itemSize={36}
            layout="vertical"
            overscanCount={2}
            style={
              Object {
                "overflowY": "scroll",
              }
            }
            useIsScrolling={false}
            width={0}
          >
            <div
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": -36,
                  "overflow": "auto",
                  "overflowY": "scroll",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 108,
                    "pointerEvents": undefined,
                    "width": "100%",
                  }
                }
              >
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={0}
                  key="0"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={2}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="1"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 0,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={2}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 0,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          Object {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___itc2100_zkyq7r0 f17mccla fz5stix f1g0x7ka fhxju0i f1qch9an f1cnd47f fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw fqerorx f1neuvcm fkjuxzh fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1qaeuiq fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-12"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="1"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="1"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  1
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk1"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk1"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk1
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={1}
                  key="1"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 36,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={3}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="2"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 36,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={3}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 36,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          Object {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___itc2100_zkyq7r0 f17mccla fz5stix f1g0x7ka fhxju0i f1qch9an f1cnd47f fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw fqerorx f1neuvcm fkjuxzh fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1qaeuiq fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-14"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="2"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="2"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  2
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk2"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk2"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk2
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
                <RenderRow
                  data={
                    Array [
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "1",
                          "partitionKey": "pk1",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 0,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "2",
                          "partitionKey": "pk2",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 1,
                        "selected": false,
                      },
                      Object {
                        "appearance": "none",
                        "item": Object {
                          "id": "3",
                          "partitionKey": "pk3",
                        },
                        "onClick": [Function],
                        "onKeyDown": [Function],
                        "rowId": 2,
                        "selected": false,
                      },
                    ]
                  }
                  index={2}
                  key="2"
                  style={
                    Object {
                      "height": 36,
                      "left": 0,
                      "position": "absolute",
                      "right": undefined,
                      "top": 72,
                      "width": "100%",
                    }
                  }
                >
                  <TableRow
                    appearance="none"
                    aria-rowindex={4}
                    aria-selected={false}
                    className="___1flxklq_0000000 f1i800kq"
                    key="3"
                    style={
                      Object {
                        "cursor": "pointer",
                        "height": 36,
                        "left": 0,
                        "position": "absolute",
                        "right": undefined,
                        "top": 72,
                        "userSelect": "none",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      aria-rowindex={4}
                      aria-selected={false}
                      className="fui-TableRow ___7e5jf00_13h4azg f19n0e5 f1ewtqcl f1jazu75 f1xeqee6 fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f1wfn5kd f1g4hkjv f15ngxrw fjbbrdp f1t94bn6 feu1g3u f1uorfem fw60kww f1vxd6vx fg706s2 frpde29 f22iagw f122n59 f1i800kq"
                      role="row"
                      style={
                        Object {
                          "cursor": "pointer",
                          "height": 36,
                          "left": 0,
                          "position": "absolute",
                          "right": undefined,
                          "top": 72,
                          "userSelect": "none",
                          "width": "100%",
                        }
                      }
                    >
                      <TableSelectionCell
                        checkboxIndicator={
                          Object {
                            "aria-label": "Select row",
                          }
                        }
                        checked={false}
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        <div
                          className="fui-TableSelectionCell ___itc2100_zkyq7r0 f17mccla fz5stix f1g0x7ka fhxju0i f1qch9an f1cnd47f fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw fqerorx f1neuvcm fkjuxzh fvrlu0f f1c71y05 f4d9j23"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="cell"
                        >
                          <Checkbox
                            aria-label="Select row"
                            checked={false}
                            className="fui-TableSelectionCell__checkboxIndicator"
                          >
                            <span
                              className="fui-Checkbox r1qaeuiq fui-TableSelectionCell__checkboxIndicator ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                            >
                              <input
                                aria-label="Select row"
                                checked={false}
                                className="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                                id="checkbox-16"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                aria-hidden={true}
                                className="fui-Checkbox__indicator rl7ci6d"
                              />
                            </span>
                          </Checkbox>
                        </div>
                      </TableSelectionCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="id"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={0}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={0}
                        >
                          <TableCellLayout
                            title="3"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="3"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  3
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                      <TableCell
                        className="___16q6g07_0000000 finvdd3 fjik90z fw35ms5"
                        key="partitionKey"
                        onClick={[Function]}
                        onKeyPress={[Function]}
                        style={
                          Object {
                            "maxWidth": 50,
                            "minWidth": 50,
                            "width": 50,
                          }
                        }
                        tabIndex={-1}
                      >
                        <div
                          className="fui-TableCell ___vwmhd20_14cya0k f10pi13n f1nbblvp f1vdfbxk f1ov4xf1 f1f5gg8d fz36nt7 f9znhxp fqrak0z f1o2ludy f1kjnpwc fxmnebo f1witrsb f22iagw f10tiqix f122n59 fqerorx f1neuvcm fkjuxzh fcep9tg finvdd3 fjik90z fw35ms5"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="cell"
                          style={
                            Object {
                              "maxWidth": 50,
                              "minWidth": 50,
                              "width": 50,
                            }
                          }
                          tabIndex={-1}
                        >
                          <TableCellLayout
                            title="pk3"
                            truncate={true}
                          >
                            <div
                              className="fui-TableCellLayout ___16owy0g_d3kle00 f22iagw f122n59 fsnqrgy fylz90v fqerorx f1neuvcm fkjuxzh f1p9o1ba"
                              title="pk3"
                            >
                              <div
                                className="fui-TableCellLayout__content ___1vq3ijp_1wyv0tp f22iagw f1vx9l62 f1p9o1ba"
                              >
                                <span
                                  className="fui-TableCellLayout__main ___1q6a9l3_1koyf1t f1p9o1ba fz5stix f1cmbuwj"
                                >
                                  pk3
                                </span>
                              </div>
                            </div>
                          </TableCellLayout>
                        </div>
                      </TableCell>
                    </div>
                  </TableRow>
                </RenderRow>
              </div>
            </div>
          </List>
        </div>
      </TableBody>
    </div>
  </Table>
</DocumentsTableComponent>
`;
